chore(pom): update to JDK17 (#991)
* chore(pom): update to JDK17

* switch to new nashorn package

* update truststore setup for JDK17

* apply spotless formatting